--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.10.2",
+    "@vitest/coverage-v8": "4.0.16",
     "prisma": "7.1.0",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
