--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vitest": "4.0.16"
   },
   "dependencies": {
+    "@fastify/jwt": "10.0.0",
     "@prisma/client": "7.1.0",
     "bcryptjs": "3.0.3",
     "dotenv": "17.2.3",
