--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DATABASE_URL="postgresql://{username}:{password}@localhost:5432/{your_db_name}"
+NODE_ENV="{dev or production}"
+JWT_SECRET="{INSERT_HERE_YOUR_JWT_SECRET}"
+PORT={PORT_NUMBER}
