--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://{username}:{password}@localhost:5432/{your_db_name}"
-NODE_ENV="{dev or production}"
-JWT_SECRET="{INSERT_HERE_YOUR_JWT_SECRET}"
-PORT={PORT_NUMBER}
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid"
+NODE_ENV="dev"
+JWT_SECRET="example-secret"
+PORT=3000
