--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "setup": "npm install && docker compose up -d && npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.10.2",
+    "@types/pg": "8.16.0",
     "@vitest/coverage-v8": "4.0.16",
     "prisma": "7.1.0",
     "tsup": "^8.5.1",
@@ -27,10 +29,12 @@
   "dependencies": {
     "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "10.0.0",
+    "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "7.1.0",
     "bcryptjs": "3.0.3",
     "dotenv": "17.2.3",
     "fastify": "^5.6.2",
+    "pg": "8.17.1",
     "zod": "4.1.13"
   }
 }
